add page structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <title>Africa's talking</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="navbar-mobile">
+            <div class="logo">
+                <a href="index.html">Logo name</a>
+            </div>
+            <div class="menu-icon">
+                <a class="fa fa-bars"></a>
+            </div>
+        </div>
+        <div class="navbar-desktop invisible"></div>
+    </nav>
+    <main class="main">
+        <section class="headline">
+            <header class="headline-header"></header>
+            <div class="headeline-desc"></div>
+            <div class="headline-date"></div>
+        </section>
+        <section class="main-program-section">
+            <header class="program-header"></header>
+            <div class="program-articles"></div>
+            <div class="more-program"></div>
+        </section>
+        <section class="speakers-section">
+            <header class="speaker-header"></header>
+            <div class="speaker-card"></div>
+            <div class="more-speaker"></div>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
