--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Africa's talking</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <nav class="navbar">
@@ -20,9 +23,21 @@
     </nav>
     <main class="main">
         <section class="headline">
-            <header class="headline-header"></header>
-            <div class="headeline-desc"></div>
-            <div class="headline-date"></div>
+            <header class="headline-header">
+                <h3>"Hello! Sharing World"</h3>
+                <h1>CREATIVE COMMONS GROBAL SUMMIT 2022</h1>
+            </header>
+            <div class="headline-desc">
+                <p>
+                    A joyful celebration believing in the value of openness and
+                    sharing. creating a prositive change with people from over
+                    80 countries is taking place in october, in Korea    
+                </p>
+            </div>
+            <div class="headline-date">
+                <h2>2015.10.15(THU) ~ 16(FRI)</h2>
+                <h5>@ National Museum of Korea,Art Center Nabi and more</h5>
+            </div>
         </section>
         <section class="main-program-section">
             <header class="program-header"></header>
@@ -36,5 +51,7 @@
         </section>
     </main>
     <footer></footer>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
