created land page mobile add header add header content add section and its content add add speakers section & its content add programs section & its content style the page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="navbar-mobile">
             <div class="logo">
-                <a href="index.html">Logo name</a>
+                <a href="index.html"><img class="logo-image" src="images/logo.svg"></a>
             </div>
             <div class="menu-icon">
                 <a class="fa fa-bars"></a>
@@ -24,30 +24,122 @@
     <main class="main">
         <section class="headline">
             <header class="headline-header">
-                <h3>"Hello! Sharing World"</h3>
-                <h1>CREATIVE COMMONS GROBAL SUMMIT 2022</h1>
+                <h1>Africa's Talking Open Hackathon: FinTech</h1>
             </header>
             <div class="headline-desc">
                 <p>
-                    A joyful celebration believing in the value of openness and
-                    sharing. creating a prositive change with people from over
-                    80 countries is taking place in october, in Korea    
+                    Join us at our open hackathon every last Thursday of the month.
+                     Come build with us, present feature request, give feedback or 
+                     just contribute to our open source API's and SDKs. 
+                     Get your ticket, let us exchange knowledge, 
+                     best practices, submit feature requests and innovate.    
                 </p>
             </div>
             <div class="headline-date">
-                <h2>2015.10.15(THU) ~ 16(FRI)</h2>
-                <h5>@ National Museum of Korea,Art Center Nabi and more</h5>
+                <h2>THU,Jun 30, 9:00 AM (EAT)</h2>
+                <h5>100 RSVP'ed</h5>
             </div>
+            <ul class="social-media-links">
+                <li><a href="#" class="fa fa-facebook"></a> </li>
+                <li><a href="#" class="fa fa-twitter"></a> </li>
+                <li><a href="#" class="fa fa-linkedin"></a> </li>
+                <li><a href="#" class="fa fa-pinterest"></a> </li>
+                <li><a href="#" class="fa fa-envelope"></a> </li>
+
+            </ul>
         </section>
         <section class="main-program-section">
-            <header class="program-header"></header>
-            <div class="program-articles"></div>
-            <div class="more-program"></div>
+            <header class="program-header">
+                <h3>Agenda</h3>
+            </header>
+            <article class="program-article">
+                <div class="p-name">
+                    <h3>Warm-up</h3>
+                </div>
+                <div class="p-desc">
+                    <p>
+                        Introduction and Pitching, 
+                        Form teams where need be. 
+                        Building/hacking, 
+                        Feedback, 
+                        Feature requests.
+                    </p>
+                </div>
+            </article>
+            <article class="program-article">
+                <div class="p-name">
+                    <h3> Code</h3>
+                </div>
+                <div class="p-desc">
+                    <p>
+                        Code in GitHub/GitLab/BitBucket and deploy in Docker/Automated
+                         CI/Travis CI/Bamboo <br>
+                    </p>
+
+                </div>
+            </article>
+            <article class="program-article">
+                <div class="p-name">
+                    <h3>Demo & Wrap-up</h3>
+                </div>
+                <div class="p-desc">
+                    <p>
+                        Teams or individuals will demo what they have hacked for feedback or adoption.
+                    </p>
+                </div>
+            </article>
+            <div class="more-program">
+                <button>Join Africa's Talking</button>
+            </div>
         </section>
         <section class="speakers-section">
-            <header class="speaker-header"></header>
-            <div class="speaker-card"></div>
-            <div class="more-speaker"></div>
+            <header class="speaker-header">
+                <h3>Featured Speakers</h3>
+            </header>
+            <article class="speaker-card">
+                <div class="speaker-img">
+                    <img alt="picture of jack Ma" src="images/Michael.webp">
+                </div>
+                <div class="speaker-desc">
+                    <div class="speaker-name">
+                        <h3>Michael Kimathi</h3>
+                    </div>
+                    <div class="speaker-title">
+                        <p>
+                           Founder and Co-Founder with a demonstrated history of working in the computer software industry. 
+                        </p>
+                    </div>
+                    <div class="speaker-details">
+                        <p>
+                            Skilled in agile frameworks, ecosystem builder and web apps.
+                        </p>
+                    </div>
+                </div>
+            </article>
+            <article class="speaker-card">
+                <div class="speaker-img">
+                    <img alt="picture of jack Ma" src="images/picture.jpeg">
+                </div>
+                <div class="speaker-desc">
+                    <div class="speaker-name">
+                        <h3>Gladys wambura</h3>
+                    </div>
+                    <div class="speaker-title">
+                        <p>
+                            Data analyst/Full-stack Software Developer |Typescript | 
+                            JAVA SCRIPT | PYTHON(Flask, Django)
+                        </p>
+                    </div>
+                    <div class="speaker-details">
+                        <p>
+                            full-Stack Software Developer trainee at Moringa School
+                        </p>
+                    </div>
+                </div>
+            </article>            
+            <div class="more-speakers">
+                <span class="more">MORE</span><span class="fa fa-long-arrow-down arrow"></span>
+            </div>
         </section>
     </main>
     <footer></footer>
