created about page add about page add mobile menu add links functionality.

--- a/about.html
+++ b/about.html
@@ -16,9 +16,28 @@
                 <a href="index.html"><img class="logo-image" src="images/logo.svg"></a>
             </div>
             <div class="menu-icon">
-                <a class="fa fa-bars"></a>
+                <a id="show-menu" class="fa fa-bars" href="#"></a>
             </div>
         </div>
+        <div class="mobile-menu-list invisible">
+            <div class="navbar-mobile">
+                <div class="logo">
+                    <a href="index.html"><img class="logo-image" src="images/logo.svg"></a>
+                </div>
+                <div class="menu-icon">
+                    <a id="hide-menu" class="fa far fa-window-close" href="#"></a>
+                </div>
+               
+            </div>
+            <ul class="menu-list">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">Documentation</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+    
+        </div>
+
         <div class="navbar-desktop invisible"></div>
     </nav>
     <main class="main about-main">
