created desktop layout

--- a/about.html
+++ b/about.html
@@ -18,6 +18,14 @@
             <div class="menu-icon">
                 <a id="show-menu" class="fa fa-bars" href="#"></a>
             </div>
+            <div class="navbar-desktop invisible">
+                <ul class="desktop-menu-list">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Events</a></li>
+                    <li><a href="#">Documentation</a></li>
+                    <li><a href="about.html">About</a></li>    
+                </ul>
+            </div>
         </div>
         <div class="mobile-menu-list invisible">
             <div class="navbar-mobile">
@@ -54,29 +62,31 @@
                      We are language and framework agnostic. All developers are welcome    
                 </p>
             </div>
-            <div class="when">
-                <div class="when-header">
-                    <a class="fa far fa-calendar" href="#"></a>
-                    <h3> When</h3>
+            <div class="when-where">
+                <div class="when">
+                    <div class="when-header">
+                        <a class="fa far fa-calendar" href="#"></a>
+                        <h3> When</h3>
+                    </div>
+                    <div class="when-desc">
+                        <p>
+                            Thursday, Jun 30 2022<br>
+                            9:00 AM - 5:30 PM (EAT)
+                        </p>
+                    </div>
                 </div>
-                <div class="when-desc">
-                    <p>
-                        Thursday, Jun 30 2022<br>
-                        9:00 AM - 5:30 PM (EAT)
-                    </p>
-                </div>
-            </div>
-            <div class="when">
-                <div class="when-header">
-                    <a class="fa fa-map-marker" href="#"></a>
-                    <h3> Where</h3>
-                </div>
-                <div class="when-desc">
-                    <p>
-                        Africa's Talking HQ<br>
-                        Mzima Springs Rd, Lavington, Nairobi<br>
-                        Nairobi, 00100<br>
-                    </p>
+                <div class="when">
+                    <div class="when-header">
+                        <a class="fa fa-map-marker" href="#"></a>
+                        <h3> Where</h3>
+                    </div>
+                    <div class="when-desc">
+                        <p>
+                            Africa's Talking HQ<br>
+                            Mzima Springs Rd, Lavington, Nairobi<br>
+                            Nairobi, 00100<br>
+                        </p>
+                    </div>
                 </div>
             </div>
            
@@ -98,19 +108,21 @@
                     which took palce in Nairobi.
                 </p>
             </div>
-            <div class="summit">
-                <div class="summit-cover">
-                    <div class="about-desc summit-desc">
-                        <h3>2021</h3>
-                        <p>Africa's Talking 2021 in Nairobi</p>
+            <div class="summit-images">
+                <div class="summit">
+                    <div class="summit-cover">
+                        <div class="about-desc summit-desc">
+                            <h3>2021</h3>
+                            <p>Africa's Talking 2021 in Nairobi</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="summit summit-2">
-                <div class="summit-cover">
-                    <div class="about-desc summit-desc">
-                        <h3>2020</h3>
-                        <p>Africa's Talking 2020 in Nairobi</p>
+                <div class="summit summit-2">
+                    <div class="summit-cover">
+                        <div class="about-desc summit-desc">
+                            <h3>2020</h3>
+                            <p>Africa's Talking 2020 in Nairobi</p>
+                        </div>
                     </div>
                 </div>
             </div>
