fix style issues

--- a/about.html
+++ b/about.html
@@ -50,46 +50,47 @@
     </nav>
     <main class="main about-main">
         <section class="headline">
-            <header class="headline-header">
-                <h1>Africa's Talking Open Hackathon: FinTech</h1>
-            </header>
-            <div class="headline-desc">
-                <p>
-                    Join us at our open hackathon every last Thursday of the month.
-                     Come build with us, present feature request, give feedback or 
-                     just contribute to our open source API's and SDKs. 
-                     Africa's Talking community allows developers to learn skills for the modern-day African Developer. 
-                     We are language and framework agnostic. All developers are welcome    
-                </p>
-            </div>
-            <div class="when-where">
-                <div class="when">
-                    <div class="when-header">
-                        <a class="fa far fa-calendar" href="#"></a>
-                        <h3> When</h3>
+            <div class="headline-opacity">
+                <header class="headline-header">
+                    <h1>Africa's Talking Open Hackathon: FinTech</h1>
+                </header>
+                <div class="headline-desc">
+                    <p>
+                        Join us at our open hackathon every last Thursday of the month.
+                         Come build with us, present feature request, give feedback or 
+                         just contribute to our open source API's and SDKs. 
+                         Africa's Talking community allows developers to learn skills for the modern-day African Developer. 
+                         We are language and framework agnostic. All developers are welcome    
+                    </p>
+                </div>
+                <div class="when-where">
+                    <div class="when">
+                        <div class="when-header">
+                            <a class="fa far fa-calendar" href="#"></a>
+                            <h3> When</h3>
+                        </div>
+                        <div class="when-desc">
+                            <p>
+                                Thursday, Jun 30 2022<br>
+                                9:00 AM - 5:30 PM (EAT)
+                            </p>
+                        </div>
                     </div>
-                    <div class="when-desc">
-                        <p>
-                            Thursday, Jun 30 2022<br>
-                            9:00 AM - 5:30 PM (EAT)
-                        </p>
+                    <div class="when">
+                        <div class="when-header">
+                            <a class="fa fa-map-marker" href="#"></a>
+                            <h3> Where</h3>
+                        </div>
+                        <div class="when-desc">
+                            <p>
+                                Africa's Talking HQ<br>
+                                Mzima Springs Rd, Lavington, Nairobi<br>
+                                Nairobi, 00100<br>
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <div class="when">
-                    <div class="when-header">
-                        <a class="fa fa-map-marker" href="#"></a>
-                        <h3> Where</h3>
-                    </div>
-                    <div class="when-desc">
-                        <p>
-                            Africa's Talking HQ<br>
-                            Mzima Springs Rd, Lavington, Nairobi<br>
-                            Nairobi, 00100<br>
-                        </p>
-                    </div>
-                </div>
             </div>
-           
         </section>
         <div class="about-desc">
             <h3>Africa's Talking</h3>
