--- a/index.html
+++ b/index.html
@@ -50,30 +50,32 @@
     </nav>
     <main class="main">
         <section class="headline">
-            <header class="headline-header">
-                <h1>Africa's Talking Open Hackathon: FinTech</h1>
-            </header>
-            <div class="headline-desc">
-                <p>
-                    Join us at our open hackathon every last Thursday of the month.
-                     Come build with us, present feature request, give feedback or 
-                     just contribute to our open source API's and SDKs. 
-                     Get your ticket, let us exchange knowledge, 
-                     best practices, submit feature requests and innovate.    
-                </p>
+            <div class="headline-opacity">
+                <header class="headline-header">
+                    <h1>Africa's Talking Open Hackathon: FinTech</h1>
+                </header>
+                <div class="headline-desc">
+                    <p>
+                        Join us at our open hackathon every last Thursday of the month.
+                         Come build with us, present feature request, give feedback or 
+                         just contribute to our open source API's and SDKs. 
+                         Get your ticket, let us exchange knowledge, 
+                         best practices, submit feature requests and innovate.    
+                    </p>
+                </div>
+                <div class="headline-date">
+                    <h2>THU,Jun 30, 9:00 AM (EAT)</h2>
+                    <h5>100 RSVP'ed</h5>
+                </div>
+                <ul class="social-media-links">
+                    <li><a href="#" class="fa fa-facebook"></a> </li>
+                    <li><a href="#" class="fa fa-twitter"></a> </li>
+                    <li><a href="#" class="fa fa-linkedin"></a> </li>
+                    <li><a href="#" class="fa fa-pinterest"></a> </li>
+                    <li><a href="#" class="fa fa-envelope"></a> </li>
+    
+                </ul>
             </div>
-            <div class="headline-date">
-                <h2>THU,Jun 30, 9:00 AM (EAT)</h2>
-                <h5>100 RSVP'ed</h5>
-            </div>
-            <ul class="social-media-links">
-                <li><a href="#" class="fa fa-facebook"></a> </li>
-                <li><a href="#" class="fa fa-twitter"></a> </li>
-                <li><a href="#" class="fa fa-linkedin"></a> </li>
-                <li><a href="#" class="fa fa-pinterest"></a> </li>
-                <li><a href="#" class="fa fa-envelope"></a> </li>
-
-            </ul>
         </section>
         <section class="main-program-section">
             <header class="program-header">
