created dynamic page

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <header class="speaker-header">
                 <h3>Featured Speakers</h3>
             </header>
-            <div class="speaker-line">
+            <!-- <div class="speaker-line">
                 <article class="speaker-card">
                     <div class="speaker-img">
                         <img alt="picture of jack Ma" src="images/Michael.webp">
@@ -169,9 +169,9 @@
                         </div>
                     </div>
                 </article> 
-            </div>
+            </div> -->
             
-            <div class="hidden-speakers invisible">
+            <!-- <div class="hidden-speakers invisible">
                 <div class="speaker-line">
                     <article class="speaker-card">
                         <div class="speaker-img">
@@ -258,10 +258,10 @@
                         </div>
                     </article> 
                 </div>
-            </div>           
-            <div class="more-speakers">
+            </div>            -->
+            <!-- <div class="more-speakers">
                 <span class="more">MORE</span><span class="fa fa-long-arrow-down arrow"></span>
-            </div>
+            </div> -->
         </section>
     </main>
     <footer class="about-footer">
