fix styling errors

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Africa's talking</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crete+Round">
+    <link href="http://fonts.cdnfonts.com/css/cocogoose" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -64,7 +65,7 @@
             <div class="headline-opacity">
                 <header class="headline-header">
                     <h2>"Hello Sharing world"</h2>
-                    <h1>Africa's Talking Open Hackathon: FinTech</h1>
+                    <h1> AFRICA'S TALKING OPEN HACKATHON: FINTECH</h1>
                 </header>
                 <div class="headline-desc">
                     <p>
@@ -181,11 +182,11 @@
                 <div class="divider"></div>
             </header>
             <ul class="q-links">
-                <li>Mozilla</li>
-                <li>Google</li>
+                <li>Facebook</li>
+                <li>Amazon</li>
                 <li>Naver</li>
-                <li>Airbnb</li>
-                <li>Africa's Talking</li>
+                <li>Microsoft</li>
+                <li>Africa's T</li>
             </ul>
             
           
