--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
     <nav class="navbar">
         <div class="top-nav">
             <ul class="top-nav-list">
-                <li><a href="#" class="fa fa-facebook"></a></li>
-                <li><a href="#" class="fa fab fa-twitter"></a></li>
+                <li><a href="#" class="fa fa-facebook nav-social"></a></li>
+                <li><a href="#" class="fa fab fa-twitter nav-social"></a></li>
                 <li><a href="#" class="list">Logout</a></li>
                 <li><a href="#" class="list">Mypage</a></li>
                 <li><a href="#" class="list">English</a></li>    
@@ -34,7 +34,8 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Events</a></li>
                     <li><a href="#">Documentation</a></li>
-                    <li><a href="about.html">About</a></li>    
+                    <li><a href="about.html">About</a></li>  
+                    <li><a href="about.html">CC Compaign</a></li>    
                 </ul>
             </div>
         </div>
@@ -61,7 +62,6 @@
         <section class="headline">
             <div class="headline-opacity">
                 <header class="headline-header about-headline">
-                    <h2>"Hello Sharing world"</h2>
                     <h1> AFRICA'S TALKING OPEN HACKATHON: FINTECH</h1>
                     <div class="divider"></div>
                 </header>
