--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <nav class="navbar">
         <div class="top-nav">
             <ul class="top-nav-list">
-                <li><a href="#" class="fa fa-facebook"></a></li>
-                <li><a href="#" class="fa fab fa-twitter"></a></li>
+                <li><a href="#" class="fa fa-facebook nav-social"></a></li>
+                <li><a href="#" class="fa fab fa-twitter nav-social"></a></li>
                 <li><a href="#" class="list">Logout</a></li>
                 <li><a href="#" class="list">Mypage</a></li>
                 <li><a href="#" class="list">English</a></li>    
@@ -35,7 +35,8 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Events</a></li>
                     <li><a href="#">Documentation</a></li>
-                    <li><a href="about.html">About</a></li>    
+                    <li><a href="about.html">About</a></li>  
+                    <li><a href="about.html" id="cc-compain">CC Compaign</a></li>  
                 </ul>
             </div>
 
